--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="style.css">
-  
+
   <title>Frontend Mentor | [Challenge Name Here]</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -17,33 +17,40 @@
 </head>
 <body>
 
-  Our Pricing
-  Annually
-  Monthly
+  <h1>Our Pricing</h1>
+  <b>Annually</b>
+  
+  <b>Monthly</b>
 
-  Basic
-  &dollar;19.99
-  &dollar;199.99
-  500 GB Storage
-  2 Users Allowed
-  Send up to 3 GB
-  Learn More
+  <div>
+    Basic
+    &dollar;19.99
+    &dollar;199.99
+    500 GB Storage
+    2 Users Allowed
+    Send up to 3 GB
+    Learn More
+  </div>
 
-  Professional
-  &dollar;24.99
-  &dollar;249.99
-  1 TB Storage
-  5 Users Allowed
-  Send up to 10 GB
-  Learn More
+  <div>
+    Professional
+    &dollar;24.99
+    &dollar;249.99
+    1 TB Storage
+    5 Users Allowed
+    Send up to 10 GB
+    Learn More
+  </div>
 
-  Master
-  &dollar;39.99
-  &dollar;399.99
-  2 TB Storage
-  10 Users Allowed
-  Send up to 20 GB
-  Learn More
+  <div>
+    Master
+    &dollar;39.99
+    &dollar;399.99
+    2 TB Storage
+    10 Users Allowed
+    Send up to 20 GB
+    Learn More
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
