--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     500 GB Storage
     2 Users Allowed
     Send up to 3 GB
-    Learn More
+    <button>Learn More</button>
   </div>
 
   <div>
@@ -39,7 +39,7 @@
     1 TB Storage
     5 Users Allowed
     Send up to 10 GB
-    Learn More
+    <button>Learn More</button>
   </div>
 
   <div>
@@ -49,7 +49,7 @@
     2 TB Storage
     10 Users Allowed
     Send up to 20 GB
-    Learn More
+    <button>Learn More</button>
   </div>
   
   <div class="attribution">
