working on cards

--- a/index.html
+++ b/index.html
@@ -22,34 +22,36 @@
   
   <b>Monthly</b>
 
-  <div>
-    Basic
-    &dollar;19.99
-    &dollar;199.99
-    500 GB Storage
-    2 Users Allowed
-    Send up to 3 GB
-    <button>Learn More</button>
-  </div>
+  <div class="cards">
+    <div class="card">
+      Basic
+      &dollar;19.99
+      &dollar;199.99
+      500 GB Storage
+      2 Users Allowed
+      Send up to 3 GB
+      <button>Learn More</button>
+    </div>
 
-  <div>
-    Professional
-    &dollar;24.99
-    &dollar;249.99
-    1 TB Storage
-    5 Users Allowed
-    Send up to 10 GB
-    <button>Learn More</button>
-  </div>
+    <div class="card">
+      Professional
+      &dollar;24.99
+      &dollar;249.99
+      1 TB Storage
+      5 Users Allowed
+      Send up to 10 GB
+      <button>Learn More</button>
+    </div>
 
-  <div>
-    Master
-    &dollar;39.99
-    &dollar;399.99
-    2 TB Storage
-    10 Users Allowed
-    Send up to 20 GB
-    <button>Learn More</button>
+    <div class="card">
+      Master
+      &dollar;39.99
+      &dollar;399.99
+      2 TB Storage
+      10 Users Allowed
+      Send up to 20 GB
+      <button>Learn More</button>
+    </div>
   </div>
   
   <div class="attribution">
