working on style of cards

--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
       Basic
       &dollar;19.99
       &dollar;199.99
+      <hr class="hrBasicPlan">
       500 GB Storage
+      <hr class="hrBasicPlan">
       2 Users Allowed
+      <hr class="hrBasicPlan">
       Send up to 3 GB
+      <hr class="hrBasicPlan">
       <button>Learn More</button>
     </div>
 
@@ -37,9 +41,13 @@
       Professional
       &dollar;24.99
       &dollar;249.99
+      <hr class="hrProfessionalPlan">
       1 TB Storage
+      <hr class="hrProfessionalPlan">
       5 Users Allowed
+      <hr class="hrProfessionalPlan">
       Send up to 10 GB
+      <hr class="hrProfessionalPlan">
       <button>Learn More</button>
     </div>
 
@@ -47,9 +55,13 @@
       Master
       &dollar;39.99
       &dollar;399.99
+      <hr class="hrMasterPlan">
       2 TB Storage
+      <hr class="hrMasterPlan">
       10 Users Allowed
+      <hr class="hrMasterPlan">
       Send up to 20 GB
+      <hr class="hrMasterPlan">
       <button>Learn More</button>
     </div>
   </div>
