working on project

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 
   <h1>Our Pricing</h1>
   <b>Annually</b>
-  
+  <label class="switch">
+    <input type="checkbox">
+    <span class="slider round"></span>
+  </label>
   <b>Monthly</b>
 
   <div class="cards">
