working on buttons

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <hr class="hrBasicPlan">
       Send up to 3 GB
       <hr class="hrBasicPlan">
-      <button>Learn More</button>
+      <button class="buttonLearnMoreBasicPlan">Learn More</button>
     </div>
 
     <div class="card">
@@ -51,7 +51,7 @@
       <hr class="hrProfessionalPlan">
       Send up to 10 GB
       <hr class="hrProfessionalPlan">
-      <button>Learn More</button>
+      <button class="buttonLearnMoreProfessionalPlan">Learn More</button>
     </div>
 
     <div class="card">
@@ -65,7 +65,7 @@
       <hr class="hrMasterPlan">
       Send up to 20 GB
       <hr class="hrMasterPlan">
-      <button>Learn More</button>
+      <button class="buttonLearnMoreMasterPlan">Learn More</button>
     </div>
   </div>
   
