--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-  <h1>Our Pricing</h1>
+  <h1 class="ourPricingTitle">Our Pricing</h1>
   <b>Annually</b>
   <label class="switch">
     <input type="checkbox">
