working on purple card

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <b>Monthly</b>
 
   <div class="cards">
-    <div class="card">
+    <div class="basicCard">
       Basic
       &dollar;19.99
       &dollar;199.99
@@ -40,7 +40,7 @@
       <button class="buttonLearnMoreBasicPlan">Learn More</button>
     </div>
 
-    <div class="card">
+    <div class="professionalCard">
       Professional
       &dollar;24.99
       &dollar;249.99
@@ -54,7 +54,7 @@
       <button class="buttonLearnMoreProfessionalPlan">Learn More</button>
     </div>
 
-    <div class="card">
+    <div class="masterCard">
       Master
       &dollar;39.99
       &dollar;399.99
