--- a/index.html
+++ b/index.html
@@ -54,18 +54,18 @@
       <button class="buttonLearnMoreProfessionalPlan">Learn More</button>
     </div>
 
-    <div class="masterCard">
-      Master
+    <div class="expertCard">
+      Expert
       &dollar;39.99
       &dollar;399.99
-      <hr class="hrMasterPlan">
+      <hr class="hrExpertPlan">
       2 TB Storage
-      <hr class="hrMasterPlan">
+      <hr class="hrExpertPlan">
       10 Users Allowed
-      <hr class="hrMasterPlan">
+      <hr class="hrExpertPlan">
       Send up to 20 GB
-      <hr class="hrMasterPlan">
-      <button class="buttonLearnMoreMasterPlan">Learn More</button>
+      <hr class="hrExpertPlan">
+      <button class="buttonLearnMoreExpertPlan">Learn More</button>
     </div>
   </div>
   
