changed style of switch

--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
 <body>
 
   <h1 class="ourPricingTitle">Our Pricing</h1>
-  <b>Annually</b>
+  <div class="annuallyMonthlySwitch">
+  <b class="annually">Annually</b>
   <label class="switch">
     <input type="checkbox">
     <span class="slider round"></span>
   </label>
-  <b>Monthly</b>
+  <b class="monthly">Monthly</b>
+  </div>
 
   <div class="cards">
     <div class="basicCard">
