--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <b class="annually">Annually</b>
   <label class="switch">
     <input type="checkbox">
-    <span class="slider round"></span>
+    <span class="slider round" id="annualMonthlySwitch"></span>
   </label>
   <b class="monthly">Monthly</b>
   </div>
@@ -75,5 +75,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
