working on switch

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   <div class="cards">
     <div class="basicCard">
       Basic
-      <h1>&dollar;19.99</h1>
-      <h1>&dollar;199.99</h1>
+      <h1 class="monthlyPrice">&dollar;19.99</h1>
+      <h1 class="annualPrice">&dollar;199.99</h1>
       <hr class="hrBasicPlan">
       500 GB Storage
       <hr class="hrBasicPlan">
@@ -44,8 +44,8 @@
 
     <div class="professionalCard">
       Professional
-      <h1>&dollar;24.99</h1>
-      <h1>&dollar;249.99</h1>
+      <h1 class="monthlyPrice">&dollar;24.99</h1>
+      <h1 class="annualPrice">&dollar;249.99</h1>
       <hr class="hrProfessionalPlan">
       1 TB Storage
       <hr class="hrProfessionalPlan">
@@ -58,8 +58,8 @@
 
     <div class="expertCard">
       Expert
-      <h1>&dollar;39.99</h1>
-      <h1>&dollar;399.99</h1>
+      <h1 class="monthlyPrice">&dollar;39.99</h1>
+      <h1 class="annualPrice">&dollar;399.99</h1>
       <hr class="hrExpertPlan">
       2 TB Storage
       <hr class="hrExpertPlan">
