--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="style.css">
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <title>Frontend Mentor | [Challenge Name Here]</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -30,8 +30,8 @@
   <div class="cards">
     <div class="basicCard">
       Basic
-      <h1 class="monthlyPrice">&dollar;19.99</h1>
-      <h1 class="annualPrice">&dollar;199.99</h1>
+      <h1 class="monthlyPrice hideMonthlyOrAnnualPrice" id="monthlyPriceBasic">&dollar;19.99</h1>
+      <h1 class="annualPrice" id="annualPriceBasic">&dollar;199.99</h1>
       <hr class="hrBasicPlan">
       500 GB Storage
       <hr class="hrBasicPlan">
@@ -44,7 +44,7 @@
 
     <div class="professionalCard">
       Professional
-      <h1 class="monthlyPrice">&dollar;24.99</h1>
+      <h1 class="monthlyPrice hideMonthlyOrAnnualPrice">&dollar;24.99</h1>
       <h1 class="annualPrice">&dollar;249.99</h1>
       <hr class="hrProfessionalPlan">
       1 TB Storage
@@ -58,7 +58,7 @@
 
     <div class="expertCard">
       Expert
-      <h1 class="monthlyPrice">&dollar;39.99</h1>
+      <h1 class="monthlyPrice hideMonthlyOrAnnualPrice">&dollar;39.99</h1>
       <h1 class="annualPrice">&dollar;399.99</h1>
       <hr class="hrExpertPlan">
       2 TB Storage
