working on switch

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
     <div class="professionalCard">
       Professional
-      <h1 class="monthlyPrice hideMonthlyOrAnnualPrice">&dollar;24.99</h1>
-      <h1 class="annualPrice">&dollar;249.99</h1>
+      <h1 class="monthlyPrice hideMonthlyOrAnnualPrice" id="monthlyPriceProfessional">&dollar;24.99</h1>
+      <h1 class="annualPrice" id="annualPriceProfessional">&dollar;249.99</h1>
       <hr class="hrProfessionalPlan">
       1 TB Storage
       <hr class="hrProfessionalPlan">
