working on switch

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
     <div class="expertCard">
       Expert
-      <h1 class="monthlyPrice hideMonthlyOrAnnualPrice">&dollar;39.99</h1>
-      <h1 class="annualPrice">&dollar;399.99</h1>
+      <h1 class="monthlyPrice hideMonthlyOrAnnualPrice" id="monthlyPriceExpert">&dollar;39.99</h1>
+      <h1 class="annualPrice" id="annualPriceExpert">&dollar;399.99</h1>
       <hr class="hrExpertPlan">
       2 TB Storage
       <hr class="hrExpertPlan">
